--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "tsx src/test.ts",
-    "build": "tsc ."
+    "test": "tsx ./src/test.ts",
+    "build": "rimraf ./dist && tsc"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +14,13 @@
     "ethers": "^6.14.4",
     "iexec": "^8.16.0",
     "lowdb": "^7.0.1",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.19",
-    "@types/node": "^24.0.4",
-    "@types/node-telegram-bot-api": "^0.64.9",
+    "@types/node": "^22.10.1",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
