--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/bot.js",
   "scripts": {
     "test": "tsx ./src/test.ts",
-    "build": "rimraf ./dist && tsc"
+    "build": "rimraf ./dist && tsc",
+    "start": "tsx watch src/bot.ts | pino-pretty -tc"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,8 @@
     "iexec": "^8.16.0",
     "lowdb": "^7.0.1",
     "node-telegram-bot-api": "^0.66.0",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "rimraf": "^6.0.1"
   },
   "devDependencies": {
