--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "ethers": "^6.14.4",
     "iexec": "^8.16.0",
     "lowdb": "^7.0.1",
