--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "node-telegram-bot-api": "^0.66.0",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.19",
